response duzenlemeleri.